--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
                     </div>
                 </div>
                 <div class="example_container">
-                    <div class="example"><img id="prototyping" src="images/prototyping.png"></div>
+                    <div class="example"><img id="prototyping" src="images/Prototyping.png"></div>
                         <div class="example_text"><h5>PROTOTYPING</h5><p>Successful projects require a concise workflow and stage development. I'll make sure you are there every step of the way.</p>
                     </div>
                 </div>
