--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ layout: default
         <div id="heading_two"><h1>CONTACT</h1></div>
         <div id="background_two">
         <div id="contact_container">
-            <div id="one"><a href="mailto:mark_sleator@hotmail.com"><img src="images/envelope.png" onmouseover="this.src='images/envelope_hover.png';" onmouseout="this.src='images/envelope.png';"></a><h5>mark_sleator@hotmail.com</h5></div>
+            <div id="one"><a href="mailto:marksleator1@gmail.com"><img src="images/envelope.png" onmouseover="this.src='images/envelope_hover.png';" onmouseout="this.src='images/envelope.png';"></a><h5>marksleator1@gmail.com</h5></div>
         <div id="three"><img src="images/phone.png" onmouseover="this.src='images/phone_hover.png';" onmouseout="this.src='images/phone.png';"><h5>07427626184</h5></div>
             <div id="two"><a href="https://www.google.co.uk/maps/place/Belfast/@54.5949198,-5.9966714,12z/data=!3m1!4b1!4m5!3m4!1s0x4860fffdd7d08a3b:0x2e57162cefc7c531!8m2!3d54.597285!4d-5.93012?hl=en"><img src="images/location.png" onmouseover="this.src='images/location_hover.png';" onmouseout="this.src='images/location.png';"></a><h5>Belfast, Northern Ireland</h5></div>
     </div>
